--- a/app/src/main/res/menu/options_menu.xml
+++ b/app/src/main/res/menu/options_menu.xml
@@ -2,9 +2,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/aboutme"
+        android:id="@+id/aboutFragment"
         android:title="@string/about" />
-    <item
-        android:id="@+id/contact"
-        android:title="@string/contact" />
 </menu>
