--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -1,5 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/navigation">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/navigation"
+    app:startDestination="@id/TitleFragment">
+
+    <fragment
+        android:id="@+id/TitleFragment"
+        android:name="com.example.newfirstapp.TitleFragment"
+        android:label="FirstApp"
+        tools:layout="@layout/fragment_title" />
+    <fragment
+        android:id="@+id/aboutFragment"
+        android:name="com.example.newfirstapp.AboutFragment"
+        android:label="AboutFragment"
+        tools:layout="@layout/fragment_about" />
+
 
 </navigation>
