--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/navigation"
-    app:startDestination="@id/TitleFragment">
+    app:startDestination="@id/titleFragment">
 
-    <fragment
-        android:id="@+id/TitleFragment"
-        android:name="com.example.newfirstapp.TitleFragment"
-        android:label="FirstApp"
-        tools:layout="@layout/fragment_title" />
     <fragment
         android:id="@+id/aboutFragment"
         android:name="com.example.newfirstapp.AboutFragment"
-        android:label="AboutFragment"
+        android:label="About"
         tools:layout="@layout/fragment_about" />
-
-
+    <fragment
+        android:id="@+id/titleFragment"
+        android:name="com.example.newfirstapp.TitleFragment"
+        android:label="TitleFragment" />
+    <fragment
+        android:id="@+id/contactFragment"
+        android:name="com.example.newfirstapp.contact.ContactFragment"
+        android:label="fragment_contact"
+        tools:layout="@layout/fragment_contact" />
 </navigation>
